# w3-examples

./: .clang-format  .clang-tidy  .gitignore  README.md  w3-examples.sln
basic_declarations/: CMakeLists.txt  Makefile  basic_declarations.vcxproj  basic_declarations.vcxproj.filters  examples_11_to_20.c  examples_1_to_10.c  examples_util.c  main.c
basic_declarations/include/: examples.h  examples_1_to_10.h  examples_def.h  examples_util.h  main.h
